edit & update commit

--- a/src/components/CartWhyUs.css
+++ b/src/components/CartWhyUs.css
@@ -10,7 +10,7 @@
 }
 
 .why_section .box:hover {
-    background-color: #0d6efd; /
+    background-color: #0d6efd; 
 }
 
 .why_section .box .img-box {
