--- a/src/components/CartWhyUs.css
+++ b/src/components/CartWhyUs.css
@@ -3,14 +3,14 @@
 .why_section .box {
     text-align: center;
     margin-top: 45px;
-    background-color: rgba(0, 94, 255, 0.808); /* رنگ پس‌زمینه هر باکس */
+    background-color: rgba(0, 94, 255, 0.808); 
     padding: 25px;
     border-radius: 5px;
     transition: background-color 0.3s ease;
 }
 
 .why_section .box:hover {
-    background-color: #0d6efd; /* تغییر رنگ باکس هنگام هاور */
+    background-color: #0d6efd; /
 }
 
 .why_section .box .img-box {
@@ -20,7 +20,7 @@
 .why_section .box .img-box svg {
     width: 55px;
     height: auto;
-    fill: #ea49ff; /* رنگ آیکون‌ها */
+    fill: #ea49ff; 
 }
 
 .layout_padding {
@@ -30,8 +30,8 @@
 
 .h1cls {
     font-weight: 800;
-    color: #ea49ff; /* رنگ عنوان‌ها */
-    text-shadow: 1px 1px 5px rgba(255, 255, 255, 0.2); /* افکت سایه برای متن */
+    color: #ea49ff; 
+    text-shadow: 1px 1px 5px rgba(255, 255, 255, 0.2); 
 }
 
 .shop_section .heading_container {
@@ -46,14 +46,14 @@
 }
 
 .why_section .box .detail-box h4 {
-    color: #1d021b; /* رنگ عنوان‌های داخل باکس */
+    color: #1d021b;
     font-size: 1.3rem;
     font-weight: bold;
     margin-bottom: 10px;
 }
 
 .why_section .box .detail-box p {
-    color: #4b0155; /* رنگ متن‌های توضیحات */
+    color: #4b0155; 
     font-size: 0.9rem;
     line-height: 1.6;
 }
