--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,10 +2,10 @@
 .footer {
   background: transparent;
   color: #fff;
-  padding: 10px 0; /* کاهش padding */
+  padding: 10px 0; 
   font-family: "Arial", sans-serif;
   text-align: center;
-  font-size: 1em; /* کاهش اندازه فونت */
+  font-size: 1em; 
 }
 
 .footer-container {
@@ -17,12 +17,12 @@
 
 .footer-section {
   padding: 15px;
-  max-width: 280px; /* کاهش عرض */
+  max-width: 280px;
 }
 
 .footer-title {
-  font-size: 1.4em; /* تغییر اندازه فونت عنوان */
-  font-weight: 600; /* کاهش وزن */
+  font-size: 1.4em; 
+  font-weight: 600; 
   margin-bottom: 10px;
   transition: color 0.3s, transform 0.3s;
 }
@@ -33,7 +33,7 @@
 }
 
 .footer-text {
-  font-size: 0.9em; /* کاهش اندازه فونت */
+  font-size: 0.9em; 
   line-height: 1.5;
 }
 
@@ -61,7 +61,7 @@
   display: flex;
   justify-content: center;
   gap: 10px;
-  font-size: 1.5em; /* تغییر اندازه آیکون‌ها */
+  font-size: 1.5em; 
 }
 
 .social-icons a {
@@ -76,33 +76,30 @@
 
 .footer-bottom {
   margin-top: 20px;
-  font-size: 0.8em; /* کاهش اندازه فونت */
+  font-size: 0.8em; 
   border-top: 1px solid rgba(255, 255, 255, 0.3);
   padding-top: 10px;
 }
 
-/* src/components/Footer.css */
-
-/* برای لینک‌ها که به عنوان دکمه‌ها استفاده می‌شوند */
 .footer-links a {
   font-size: 18px;
   font-weight: bold;
-  display: inline-block; /* برای استفاده از padding */
-  padding: 8px 15px; /* اضافه کردن padding برای دکمه‌ها */
-  background-color: transparent; /* پس‌زمینه شفاف */
-  color: #ddd; /* رنگ متن */
+  display: inline-block; 
+  padding: 8px 15px; 
+  background-color: transparent; 
+  color: #ddd; 
   text-decoration: none; /* حذف زیرخط */
   border: 2px solid transparent; /* مرز شفاف به اندازه دکمه */
-  border-radius: 5px; /* گوشه‌های گرد */
+  border-radius: 5px; 
   transition: all 0.3s ease; /* انیمیشن نرم برای تغییرات */
 }
 
 .footer-links a:hover {
-  color: #fff; /* رنگ متن در حالت هاور */
-  background-color: rgba(255, 215, 0, 0.2); /* رنگ پس‌زمینه در حالت هاور */
-  border: 2px solid #ffd700; /* مرز در حالت هاور */
+  color: #fff; 
+  background-color: rgba(255, 215, 0, 0.2); 
+  border: 2px solid #ffd700; 
   transform: translateY(-3px); /* حرکت دکمه به سمت بالا */
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); /* سایه زیبا در حالت هاور */
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); 
 }
 .footer-bottom a {
   color: #66ff00;
