--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -94,9 +94,9 @@
   position: relative;
   color: #fff;
   display: inline-block;
-  width: 50px; /* عرض ثابت برای جلوگیری از حرکت */
-  text-align: center; /* قرارگیری آیکون در وسط */
-  padding: 0 10px; /* فاصله ثابت */
+  width: 50px; 
+  text-align: center; 
+  padding: 0 10px; 
 }
 
 .cart-icon-size {
