--- a/src/pages/Cart.css
+++ b/src/pages/Cart.css
@@ -15,20 +15,20 @@
     background: #1d021b; 
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5); /* سایه برای برجسته‌تر شدن */
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5); 
 }
 
 .cart-title {
     font-size: 1.5rem;
     margin-bottom: 15px;
     text-align: center;
-    color: #e100ff; /* رنگ متن با تضاد بیشتر */
+    color: #e100ff; 
 }
 
 .cart-payment-info label {
     display: block;
     margin-bottom: 8px;
-    color: #9c9c9c; /* ملایم‌تر کردن رنگ */
+    color: #9c9c9c; 
 }
 
 .cart-discount-code {
@@ -41,8 +41,8 @@
     width: 70%;
     padding: 8px;
     border-radius: 4px;
-    border: 1px solid #2575fc; /* تغییر رنگ بوردر به رنگ متضاد */
-    background: #2c0028; /* رنگ پس‌زمینه تیره‌تر */
+    border: 1px solid #2575fc; 
+    background: #2c0028;
     color: #fff;
 }
 
@@ -58,7 +58,7 @@
 
 .apply-discount-btn:hover {
     background: rgba(255, 215, 0, 0.2);; 
-    border:3px solid #ffd700; /* تغییر به رنگ آبی برای تضاد */
+    border:3px solid #ffd700;
     transform: scale(1.05); /* کمی بزرگ شدن در حالت هاور */
 }
 
@@ -70,13 +70,13 @@
     display: flex;
     justify-content: space-between;
     padding: 10px 0;
-    border-bottom: 1px solid #2575fc; /* تغییر رنگ بوردر */
+    border-bottom: 1px solid #2575fc; 
 }
 
 .cart-summary-total {
     font-weight: bold;
     font-size: 1.2rem;
-    color: #e100ff; /* استفاده از رنگ برجسته‌تر */
+    color: #e100ff;
 }
 
 .complete-purchase-btn {
@@ -105,7 +105,7 @@
 .cart-item {
     display: flex;
     align-items: center;
-    background: #2c0028; /* کمی تیره‌تر برای برجسته‌سازی */
+    background: #2c0028;
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 8px;
@@ -116,7 +116,7 @@
     height: 60px;
     border-radius: 8px;
     margin-right: 15px;
-    border: 2px solid #2575fc; /* اضافه کردن بوردر برای جلوه بهتر */
+    border: 2px solid #2575fc; 
 }
 
 .cart-item-details {
@@ -127,7 +127,7 @@
 
 .cart-item-title {
     font-size: 1rem;
-    color: #e100ff; /* برجسته‌تر کردن عنوان */
+    color: #e100ff; 
 }
 
 .cart-item-price {
@@ -158,5 +158,5 @@
     text-align: center;
     padding: 20px;
     font-size: 1.2rem;
-    color: #9c9c9c; /* ملایم‌تر و متناسب با رنگ‌های جدید */
+    color: #9c9c9c; 
 }
